Revert "Merging in new header-search content from Sven for SLI search. Adding SLI js file and external css file. Quick styling fix to stop the search bar spilling over the social icons."
This reverts commit e6b658d65485a00a65a8969d1fcb049cffc0e724.

--- a/css/user-override.css
+++ b/css/user-override.css
@@ -276,7 +276,6 @@ p.afterpay-text{
 .mobile-menu .btn-block {border:none; text-align:left; color:#FFF; font-size:26px; padding-left:10px;}
 .mobile-menu h4 {margin-left:10px;}
 .mobile-menu .fa.fa-chevron-down { color:#FFF;}
-.header-search {padding-right: 10px;}
 .header-search .fa {color:#ec6f34;}
 .thumbnail-padding { padding:15px;}
 .row.home-featured-category .thumbnail {margin-bottom: 25px;}
